--- a/apputveckling/src/main/webapp/includes/editMember.xhtml
+++ b/apputveckling/src/main/webapp/includes/editMember.xhtml
@@ -6,27 +6,27 @@
 <h:body>
    <h:form>
 
-      #{clientBean.editClient(clientBean.clientToEdit.clientID)}
+      <!--#{clientBean.editClient(clientBean.clientToEdit.clientID)}-->
       <div class="container">
          <h:panelGrid columns="2">
             <h:outputLabel for="fullName" value="Full Name:"/>
 
-            <h:inputText id="fullName" value="#{clientBean.clientToEdit.name}"/>
+            <h:inputText id="fullName" value=""/>
             <h:outputLabel for="password" value="Password:"/>
-            <h:inputText id="password" value="#{clientBean.clientToEdit.password}"/>
+            <h:inputText id="password" value=""/>
 
             <h:outputLabel for="password2" value="Re enter Password:"/>
-            <h:inputText id="password2" value="#{clientBean.clientToEdit.password2}"/>
+            <h:inputText id="password2" value=""/>
 
             <h:outputLabel for="email" value="Email:"/>
-            <h:inputText id="email" value="#{clientBean.clientToEdit.email}"/>
+            <h:inputText id="email" value=""/>
 
             <h:outputLabel for="phone" value="Phone:"/>
-            <h:inputText id="phone" value="#{clientBean.clientToEdit.phone}"/>
+            <h:inputText id="phone" value=""/>
 
          </h:panelGrid>
 
-         <h:commandButton value="Submit" action="#{clientBean.saveOrUpdateClient()}"/>
+         <h:commandButton value="Submit" action="#"/>
       </div>
    </h:form>
 </h:body>
