--- a/apputveckling/src/main/webapp/includes/editClient.xhtml
+++ b/apputveckling/src/main/webapp/includes/editClient.xhtml
@@ -8,23 +8,23 @@
         <div class="container">
             <h:panelGrid columns="2">
                 <h:outputLabel for="name" value="Name:"/>
-                <h:inputText id="name" value="#{clientBean.clientToEdit.name}"/>
+                <h:inputText id="name" value=""/>
 
                 <h:outputLabel for="password" value="Password:"/>
-                <h:inputText id="password" value="#{clientBean.clientToEdit.password}"/>
+                <h:inputText id="password" value=""/>
 
                 <h:outputLabel for="password2" value="Password:"/>
-                <h:inputText id="password2" value="#{clientBean.clientToEdit.password2}"/>
+                <h:inputText id="password2" value=""/>
 
                 <h:outputLabel for="phone" value="Phone:"/>
-                <h:inputText id="phone" value="#{clientBean.clientToEdit.phone}"/>
+                <h:inputText id="phone" value=""/>
 
                 <h:outputLabel for="email" value="Email:"/>
-                <h:inputText id="email" value="#{clientBean.clientToEdit.email}"/>
+                <h:inputText id="email" value=""/>
 
             </h:panelGrid>
 
-            <h:commandButton value="Submit" action="#{clientBean.saveOrUpdateClient}"/>
+            <h:commandButton value="Submit" action="#"/>
         </div>
     </h:form>
 </h:body>
