--- a/apputveckling/src/main/webapp/includes/clients.xhtml
+++ b/apputveckling/src/main/webapp/includes/clients.xhtml
@@ -101,7 +101,7 @@
     </h:form>
 
     <p:dialog id="addcilent" widgetVar="addcilent" modal="true" visible="false" header="Add Client" >
-        <ui:include src="editMember.xhtml"/>
+        <ui:include src="editClient.xhtml"/>
     </p:dialog>
 
 </div>
