--- a/apputveckling/src/main/webapp/includes/editClient.xhtml
+++ b/apputveckling/src/main/webapp/includes/editClient.xhtml
@@ -8,19 +8,19 @@
         <div class="container">
             <h:panelGrid columns="2">
                 <h:outputLabel for="name" value="Name:"/>
-                <h:inputText id="name" value=""/>
+                <h:inputText id="name" value="#{clientBean.clientTOedit.clientName}"/>
 
                 <h:outputLabel for="password" value="Password:"/>
-                <h:inputText id="password" value=""/>
+                <h:inputText id="password" value="#{clientBean.clientTOedit.password}"/>
 
                 <h:outputLabel for="password2" value="Password:"/>
-                <h:inputText id="password2" value=""/>
+                <h:inputText id="password2" value="#{clientBean.passwordTemp}"/>
 
                 <h:outputLabel for="phone" value="Phone:"/>
-                <h:inputText id="phone" value=""/>
+                <h:inputText id="phone" value="#{clientBean.clientTOedit.clientPhone}"/>
 
                 <h:outputLabel for="email" value="Email:"/>
-                <h:inputText id="email" value=""/>
+                <h:inputText id="email" value="#{clientBean.clientTOedit.clientEmail}"/>
 
             </h:panelGrid>
 
