--- a/apputveckling/src/main/webapp/includes/editClient.xhtml
+++ b/apputveckling/src/main/webapp/includes/editClient.xhtml
@@ -24,7 +24,7 @@
 
             </h:panelGrid>
 
-            <h:commandButton value="Submit" action="#"/>
+            <h:commandButton value="Submit" action="#{clientBean.addClient()}"/>
         </div>
     </h:form>
 </h:body>
