--- a/apputveckling/src/main/webapp/includes/clients.xhtml
+++ b/apputveckling/src/main/webapp/includes/clients.xhtml
@@ -84,7 +84,7 @@
 
         <h:form>
             <ui:repeat value="#{clientBean.clientList}" var="client">
-                <h:commandLink action="#" styleClass="list-group-item list-group-item-action">
+                <h:commandLink action="#{clientBean.collectClientInfo(client.clientId)}" styleClass="list-group-item list-group-item-action">
                     <f:param name="clientId" value="#{client.clientId}" />
 
                   #{client.clientName}
@@ -95,7 +95,7 @@
     </div>
 
     <h:form>
-        <p:commandButton styleClass="add_button m-3" value="Add New Client" action="#" update=":addcilent"
+        <p:commandButton styleClass="add_button m-3" value="Add New Client"  update=":addcilent"
                          oncomplete="PF('addcilent').show()"/>
 
     </h:form>
