--- a/apputveckling/src/main/webapp/includes/deleteModal.xhtml
+++ b/apputveckling/src/main/webapp/includes/deleteModal.xhtml
@@ -24,7 +24,7 @@
             <button type="button" class="btn btn-secondary"
                     data-dismiss="modal">Cancel
             </button>
-            <h:commandButton value="Delete" action="#{bean.deleteEntity(entityID)}"
+            <h:commandButton value="Delete" action="#{client.deleteEntity(entityID)}"
                              styleClass="btn btn-danger"/>
          </div>
       </div>
