--- a/apputveckling/src/main/webapp/includes/editMember.xhtml
+++ b/apputveckling/src/main/webapp/includes/editMember.xhtml
@@ -5,27 +5,23 @@
 
 <h:body>
    <h:form>
-
       <div class="container">
          <h:panelGrid columns="2">
-            <h:outputLabel for="fullName" value="Full Name:"/>
+            <h:outputLabel for="name" value="Name:"/>
+            <h:inputText id="name" value="#{clientBean.clientTOedit.clientName}"/>
 
-            <h:inputText id="fullName" value=""/>
             <h:outputLabel for="password" value="Password:"/>
-            <h:inputText id="password" value=""/>
-
-            <h:outputLabel for="password2" value="Re enter Password:"/>
-            <h:inputText id="password2" value=""/>
-
-            <h:outputLabel for="email" value="Email:"/>
-            <h:inputText id="email" value=""/>
+            <h:inputText id="password" value="#{clientBean.clientTOedit.password}"/>
 
             <h:outputLabel for="phone" value="Phone:"/>
-            <h:inputText id="phone" value=""/>
+            <h:inputText id="phone" value="#{clientBean.clientTOedit.clientPhone}"/>
+
+            <h:outputLabel for="email" value="Email:"/>
+            <h:inputText id="email" value="#{clientBean.clientTOedit.clientEmail}"/>
 
          </h:panelGrid>
 
-         <h:commandButton value="Submit" action="#"/>
+         <h:commandButton value="Submit" action="#{clientBean.editClient()}"/>
       </div>
    </h:form>
 </h:body>
