fixed structure of calendar and event handling for the entire project

--- a/apputveckling/src/main/webapp/includes/Calendar.xhtml
+++ b/apputveckling/src/main/webapp/includes/Calendar.xhtml
@@ -1,31 +1,56 @@
-<div class="container-fluid"
-     xmlns="http://www.w3.org/1999/xhtml"
+<div xmlns="http://www.w3.org/1999/xhtml"
      xmlns:h="http://xmlns.jcp.org/jsf/html"
-     xmlns:f="http://xmlns.jcp.org/jsf/core">
+     xmlns:f="http://xmlns.jcp.org/jsf/core"
+     xmlns:p="http://primefaces.org/ui">
+
     <h:head>
-        <title>Calendar Page</title>
-        <a href="https://github.com/williamtroup/Calendar.js">Calendar.js github page</a>
+        <title>Schemaläggning</title>
     </h:head>
-
     <h:body>
-        <div class="d-flex flex-row bd-highlight mb-3">
-            <div class="d-flex flex-column bd-highlight mb-3 calendar-flex-col1-cust">
-                <div class="p-2 bd-highlight">
-                    <div id="calendarMonthly" style="height: 25rem">
-                    </div>
-                </div>
-                <div class="p-2 bd-highlight">
-                    <div id="calendarWidget" style="height: 20rem; width: 100%;">
-                    </div>
-                </div>
-            </div>
-            <div class="p-2 bd-highlight calendar-flex-col2-cust">
-                <div id="calendarWeekly" style="height: 50rem">
-                </div>
-            </div>
-        </div>
+        <div class="card" style="width: 60%; height: 60%; margin: 2rem auto">
+            <h:form>
+                <p:growl id="messages" showDetail="true" escape="false"/>
 
-        <script type="text/javascript" src="#{request.contextPath}/resources/js/Calendar.js-main/dist/calendar.js"> </script>
-        <script type="text/javascript" src="#{request.contextPath}/resources/js/calendar.js"> </script>
+                <p:schedule id="schedule" value="#{scheduleBean.model}" widgetVar="myschedule">
+                    <p:ajax event="dateSelect" listener="#{scheduleBean.onDateSelect}" update="eventDetails"
+                            oncomplete="PF('eventDialog').show();"/>
+                    <p:ajax event="eventSelect" listener="#{scheduleBean.onEventSelect}" update="eventDetails"
+                            oncomplete="PF('eventDialog').show();"/>
+                    <p:ajax event="eventMove" listener="#{scheduleBean.onEventMove}" update="messages"/>
+                </p:schedule>
+
+                <p:dialog widgetVar="eventDialog" header="Event Details" showEffect="fade" hideEffect="fade">
+                    <h:panelGrid id="eventDetails" columns="2" cellpadding="7">
+                        <p:outputLabel for="title" value="Titles" styleClass="font-bold"/>
+                        <p:inputText id="title" value="#{scheduleBean.event.title}" required="true"/>
+
+                        <p:outputLabel for="from" value="From" styleClass="font-bold"/>
+                        <p:datePicker id="from" value="#{scheduleBean.event.startDate}" pattern="dd/MM/yyyy"
+                                      showTime="true" appendTo="@(body)"/>
+
+                        <p:outputLabel for="to" value="To" styleClass="font-bold"/>
+                        <p:datePicker id="to" value="#{scheduleBean.event.endDate}" pattern="dd/MM/yyyy"
+                                      showTime="true" appendTo="@(body)"/>
+
+
+                        <p:outputLabel for="allDay" value="All Day" styleClass="font-bold"/>
+                        <h:selectBooleanCheckbox id="allDay" value="#{scheduleBean.event.allDay}"/>
+                    </h:panelGrid>
+
+                    <div class="flex justify-content-between mt-3">
+                        <p:commandButton type="reset" value="Reset" styleClass="font-bold ui-button-outlined"
+                                         ignoreAutoUpdate="false"/>
+                        <p:commandButton id="addButton" value="Save" action="#{scheduleBean.addEvent}"
+                                         oncomplete="PF('myschedule').update();PF('eventDialog').hide();"/>
+                        <h:form>
+                            <p:commandButton id="deleteBtn" type="delete" value="Delete" style="float: right; background-color: red;"
+                                             styleClass="font-bold ui-button-danger "
+                                             action="#{scheduleBean.deleteEvent}"
+                                             oncomplete="PF('myschedule').update();P F('eventDialog').hide(); model.delete"/>
+                        </h:form>
+                    </div>
+                </p:dialog>
+            </h:form>
+        </div>
     </h:body>
 </div>
