--- a/apputveckling/src/main/webapp/views/SignUp.xhtml
+++ b/apputveckling/src/main/webapp/views/SignUp.xhtml
@@ -44,7 +44,7 @@
          <h:inputText id="txtphone" value="#{signup.phone}" styleClass="form-control mb-2" required="true"> </h:inputText>
          <p>Allready a member? <a href="LogIn.xhtml">Sign in</a></p>
 
-         <h:commandButton id="cmdInsert" value="Create account" action="#{signup.add()}"> </h:commandButton>
+         <h:commandButton id="cmdInsert" value="Create account" action="#{signup.add}"> </h:commandButton>
       </h:form>
 
       </div>
