--- a/apputveckling/src/main/webapp/views/client/ClientHome.xhtml
+++ b/apputveckling/src/main/webapp/views/client/ClientHome.xhtml
@@ -17,7 +17,7 @@
 </h:head>
 <h:body>
     <ui:include src="../../includes/client_inc/nav_client.xhtml"/>
-    <a href="appointment.xhtml" class="btn btn-primary" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000">Make an appointment</a>
+    <a href="ClientAppointment.xhtml" class="btn btn-primary" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000">Make an appointment</a>
     <div class="" id="HomeClient" style="margin-top: 130px">
         <ui:include src="../../includes/client_inc/autoplayingSlide.xhtml"/>
         <ui:include src="../../includes/client_inc/clientHomeContent.xhtml"/>
