--- a/apputveckling/src/main/webapp/assets/styles.css
+++ b/apputveckling/src/main/webapp/assets/styles.css
@@ -100,11 +100,12 @@
     margin: auto;
 }
 
-
 .calendar-flex-col1-cust {
     width: 25%;
 }
 .calendar-flex-col2-cust {
     width: 50%;
 }
-
+.client-calendar-selectTimeDiv {
+    width: 100%;
+}
