--- a/apputveckling/src/main/webapp/includes/homeContent.xhtml
+++ b/apputveckling/src/main/webapp/includes/homeContent.xhtml
@@ -37,6 +37,6 @@
             </div>
         </div>
     </div>
-    <button type="button" class="btn btn-primary btn-lg btn-block mt-3" onclick="window.location.href='client/home.xhtml'" >Client page</button>
+    <button type="button" class="btn btn-primary btn-lg btn-block mt-3" onclick="window.location.href='client/ClientHome.xhtml'" >Client page</button>
 </div>
 
