sparar för att kuna gå till prototyp2

--- a/apputveckling/src/main/webapp/views/SignUp.xhtml
+++ b/apputveckling/src/main/webapp/views/SignUp.xhtml
@@ -12,6 +12,8 @@
    </h:head>
 
    <h:body>
+      <!--<ui:include src="../includes/client_inc/nav_client.xhtml"/> !-->
+
       <h1>Sign up page</h1>
 
       <div class="container min-vh-100 min-vw-100 d-flex justify-content-center align-items-center">
