--- a/apputveckling/src/main/webapp/includes/client_inc/nav_client.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/nav_client.xhtml
@@ -26,10 +26,10 @@
         <div class="offcanvas offcanvas-end bg-dark " id="navbarNavRight" data-bs-toggle="navbar-toggler" style="margin-top: 72px">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Bli Medlem</a>
+                    <a class="nav-link text-white" href="../../views/SignUp.xhtml">Bli Medlem</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Login</a>
+                    <a class="nav-link text-white" href="../../views/LogIn.xhtml">Login</a>
                 </li>
             </ul>
         </div>
