--- a/apputveckling/src/main/webapp/views/admin_calendar.xhtml
+++ b/apputveckling/src/main/webapp/views/admin_calendar.xhtml
@@ -1,6 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
@@ -12,7 +9,7 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 template="/views/template.xhtml">
         <ui:define name="content">
-            <div class="calendar-content-cust">
+            <div class="container-fluid">
                 <h1 class="offcanvas-title">Din kalender</h1>
                 <ui:include src="../includes/Calendar.xhtml"/>
             </div>
