--- a/apputveckling/src/main/webapp/views/template.xhtml
+++ b/apputveckling/src/main/webapp/views/template.xhtml
@@ -29,14 +29,14 @@
 <div class="container-fluid">
     <div class="row">
         <!-- Sidebar for desktop -->
-        <div class="col-md-3 d-none d-md-block bg-dark text-white vh-100 position-sticky" style="top: 0; width: 150px;">
+        <div class="col-md-1 d-none d-md-block bg-dark text-white vh-100 position-sticky" style="top: 0;">
             <div class="d-flex flex-column h-100 p-2">
                 <ui:include src="nav-items.xhtml"/>
             </div>
         </div>
 
         <!-- Content area -->
-        <div class="col-md-9 col-12">
+        <div class="col-md-11">
             <!-- Hamburger button for mobile -->
             <div class="d-md-none">
                 <button class="btn btn-light text-dark border border-secondary m-2" type="button"
