--- a/apputveckling/src/main/webapp/views/template.xhtml
+++ b/apputveckling/src/main/webapp/views/template.xhtml
@@ -6,7 +6,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-<head>
+<h:head>
     <title>My Application</title>
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
     <link rel="stylesheet" href="#{request.contextPath}/assets/styles.css"/>
@@ -24,7 +24,7 @@
     </script>
     <!-- This previous code didn't import the bootstrap js bundle successfully:
     <h:outputScript library="js" name="bootstrap.bundle.min.js" target="head"/> -->
-</head>
+</h:head>
 <body>
 <div class="container-fluid">
     <div class="row">
