--- a/apputveckling/src/main/webapp/includes/client_inc/clientCalendar.xhtml
+++ b/apputveckling/src/main/webapp/includes/client_inc/clientCalendar.xhtml
@@ -18,7 +18,7 @@
                             <p:outputLabel for="calendarClient" value="Select your date"/>
                             <p:datePicker id="calendarClient" value="#{calendarApplication.date}"
                                           inline="true"
-                                          disabledDays="${scheduleBean.}">
+                                          disabledDays="${scheduleBean}">
                                 <p:ajax event="dateSelect" listener="#{calendarApplication.onDateSelect}"/>
                             </p:datePicker>
                         </h:panelGrid>
