--- a/apputveckling/src/main/webapp/includes/Calendar.xhtml
+++ b/apputveckling/src/main/webapp/includes/Calendar.xhtml
@@ -10,40 +10,40 @@
             <div class="col-md-9">
             <h:form>
                 <p:growl id="messages" showDetail="true" escape="false"/>
-                <p:schedule id="schedule" value="#{scheduleBean.model}" widgetVar="myschedule" view="timeGridWeek" tooltip="true" resizable="true"
+                <p:schedule id="schedule" value="#{eventEntityBean.model}" widgetVar="myschedule" view="timeGridWeek" tooltip="true" resizable="true"
                             disableWeekends="true" minTime="09:00:00" maxTime="19:00:00" showWeekNumbers="true">
-                    <p:ajax event="dateSelect" listener="#{scheduleBean.onDateSelect}" update="eventDetails"
+                    <p:ajax event="dateSelect" listener="#{eventEntityBean.onDateSelect}" update="eventDetails"
                             oncomplete="PF('eventDialog').show();"/>
-                    <p:ajax event="eventSelect" listener="#{scheduleBean.onEventSelect}" update="eventDetails"
+                    <p:ajax event="eventSelect" listener="#{eventEntityBean.onEventSelect}" update="eventDetails"
                             oncomplete="PF('eventDialog').show();"/>
-                    <p:ajax event="eventMove" listener="#{scheduleBean.onEventMove}" update="messages"/>
+                    <p:ajax event="eventMove" listener="#{eventEntityBean.onEventMove}" update="messages"/>
                 </p:schedule>
 
                 <p:dialog widgetVar="eventDialog" header="Event Details" showEffect="fade" hideEffect="fade">
                     <h:panelGrid id="eventDetails" columns="2" cellpadding="7">
                         <p:outputLabel for="title" value="Titles" styleClass="font-bold"/>
-                        <p:inputText id="title" value="#{scheduleBean.event.title}" required="true"/>
+                        <p:inputText id="title" value="#{eventEntityBean.event.title}" required="true"/>
 
                         <p:outputLabel for="from" value="From" styleClass="font-bold"/>
-                        <p:datePicker id="from" value="#{scheduleBean.event.startDate}" pattern="yyyy/MM/dd" timeInput="true"
+                        <p:datePicker id="from" value="#{eventEntityBean.event.startDate}" pattern="yyyy/MM/dd" timeInput="true"
                                       showTime="true" appendTo="@(body)"/>
 
                         <p:outputLabel for="to" value="To" styleClass="font-bold"/>
-                        <p:datePicker id="to" value="#{scheduleBean.event.endDate}" pattern="yyyy/MM/dd" timeInput="true"
+                        <p:datePicker id="to" value="#{eventEntityBean.event.endDate}" pattern="yyyy/MM/dd" timeInput="true"
                                       showTime="true" appendTo="@(body)"/>
 
                         <p:outputLabel for="allDay" value="All Day" styleClass="font-bold"/>
-                        <h:selectBooleanCheckbox id="allDay" value="#{scheduleBean.event.allDay}"/>
+                        <h:selectBooleanCheckbox id="allDay" value="#{eventEntityBean.event.allDay}"/>
                     </h:panelGrid>
 
                     <div class="flex justify-content-between mt-3">
                         <p:commandButton type="reset" value="Reset" styleClass="font-bold ui-button-outlined"
                                          ignoreAutoUpdate="false"/>
-                        <p:commandButton id="addButton" value="Save" action="#{scheduleBean.addEvent}"
+                        <p:commandButton id="addButton" value="Save" action="#{eventEntityBean.addEvent}"
                                          oncomplete="PF('myschedule').update();PF('eventDialog').hide();"/>
                         <p:commandButton id="deleteBtn" type="delete" value="Delete" style="float: right; background-color: red;"
                                          styleClass="font-bold ui-button-danger "
-                                         action="#{scheduleBean.deleteEvent}"
+                                         action="#{eventEntityBean.deleteEvent}"
                                          oncomplete="PF('myschedule').update();P F('eventDialog').hide(); model.delete"/>
 
                     </div>
@@ -57,13 +57,13 @@
                 </h:panelGrid>
                 <p:dialog header="Time picker" widgetVar="freeTime" >
                     <p:outputLabel for="dateFrom" value="From" styleClass="font-bold"/><br/>
-                    <p:datePicker id="dateFrom" value="#{scheduleBean.time_from}" pattern="yyyy-MM-dd" required="true" timeInput="true"
+                    <p:datePicker id="dateFrom" value="#{eventEntityBean.time_from}" pattern="yyyy-MM-dd" required="true" timeInput="true"
                                   showTime="true"/><br/>
 
                     <p:outputLabel for="dateTo" value="To" styleClass="font-bold"/><br/>
-                    <p:datePicker id="dateTo" value="#{scheduleBean.time_to}" pattern="yyyy-MM-dd" required="true" timeInput="true"
+                    <p:datePicker id="dateTo" value="#{eventEntityBean.time_to}" pattern="yyyy-MM-dd" required="true" timeInput="true"
                                   showTime="true"/><br/>
-                    <p:commandButton value="Send"  action="#{scheduleBean.setAvailableEvents}" oncomplete="PF('freeTime).hide()"/>
+                    <p:commandButton value="Send" action="#{eventEntityBean.setAvailableEvents}" oncomplete="PF('freeTime).hide()"/>
                 </p:dialog>
             </h:form>
         </div>
