--- a/apputveckling/src/main/webapp/includes/Calendar.xhtml
+++ b/apputveckling/src/main/webapp/includes/Calendar.xhtml
@@ -1,6 +1,6 @@
 <div xmlns="http://www.w3.org/1999/xhtml"
      xmlns:h="http://xmlns.jcp.org/jsf/html"
-     xmlns:p="http://primefaces.org/ui" >
+     xmlns:p="http://primefaces.org/ui" xmlns:f="http://java.sun.com/jsf/core">
 
     <h:head>
         <title>Schemaläggning</title>
@@ -11,7 +11,7 @@
             <h:form>
                 <p:growl id="messages" showDetail="true" escape="false"/>
                 <p:schedule id="schedule" value="#{eventEntityBean.model}" widgetVar="myschedule" view="timeGridWeek" tooltip="true" resizable="true"
-                            disableWeekends="true" minTime="09:00:00" maxTime="19:00:00" showWeekNumbers="true">
+                            disableWeekends="true" minTime="09:00:00" maxTime="19:00:00" showWeekNumbers="true" urlTarget="false">
                     <p:ajax event="dateSelect" listener="#{eventEntityBean.onDateSelect}" update="eventDetails"
                             oncomplete="PF('eventDialog').show();"/>
                     <p:ajax event="eventSelect" listener="#{eventEntityBean.onEventSelect}" update="eventDetails"
@@ -31,6 +31,15 @@
                         <p:outputLabel for="to" value="To" styleClass="font-bold"/>
                         <p:datePicker id="to" value="#{eventEntityBean.event.endDate}" pattern="yyyy/MM/dd" timeInput="true"
                                       showTime="true" appendTo="@(body)"/>
+
+                        <p:outputLabel for="email" value="Email" styleClass="font-bold"/>
+                        <p:inputText id="email" value="#{eventEntityBean.email}"/>
+
+                        <p:outputLabel for="url" value="URL" styleClass="font-bold"/>
+                        <p:inputText id="url" value="#{eventEntityBean.event.url}"/>
+
+                        <p:outputLabel for="description" value="Description" styleClass="font-bold"/>
+                        <p:inputTextarea id="description" value="#{eventEntityBean.event.description}" rows="3" cols="30"/>
 
                         <p:outputLabel for="allDay" value="All Day" styleClass="font-bold"/>
                         <h:selectBooleanCheckbox id="allDay" value="#{eventEntityBean.event.allDay}"/>
@@ -53,7 +62,7 @@
             <div class="col-md-3">
             <h:form>
                 <h:panelGrid>
-                    <p:commandButton id="freeEventCreate" styleClass="ui-button ui-button-success" value="Create times" onclick="PF('freeTime').show()"/>
+                    <p:commandButton id="freeEventCreate" styleClass="ui-button ui-button-success" value="Schedule meetings" onclick="PF('freeTime').show()"/>
                 </h:panelGrid>
                 <p:dialog header="Time picker" widgetVar="freeTime" >
                     <p:outputLabel for="dateFrom" value="From" styleClass="font-bold"/><br/>
